--- a/python.html
+++ b/python.html
@@ -255,26 +255,30 @@
                   <h4 class="panel-title">
                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                       href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      Week 3 - Intro to CSS and Classes
-                    </a>
+                      Python Built-in Data structures (Basic)                     </a>
                   </h4>
                 </div>
                 <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                   <div class="panel-body">
+
                     <p>
                     <ol>
                       <li>
-                        Introduction to CSS <b><i>25 mins</i></b>
+                        The learner will learn Basic data structures and their methods
+                        <b><i>25 mins</i></b>
                       </li>
                       <li>
-                        Classes in HTML and CSS <b><i>25 mins</i></b>
+                        The learner will learn Python String and string methods
+ <b><i>25 mins</i></b>
                       </li>
                       <li>
-                        CSS Box Model <b><i>20 mins</i></b>
+                        The learner will learn Weekly Session Recording
+ <b><i>20 mins</i></b>
                       </li>
 
                       <li>
-                        Q & A and Wrap Up <b><i>10 mins</i></b>
+                        Weekly Coding Challenge
+ <b><i>10 mins</i></b>
                       </li>
                     </ol>
                     </p>
@@ -285,7 +289,7 @@
                     <h4 class="panel-title">
                       <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                         href="#collapsonefoure" aria-expanded="false" aria-controls="collapsonefoure">
-                        Week 4 - Margin Padding and Portfolio Website
+                        Python Control Flows
                       </a>
                     </h4>
                   </div>
@@ -293,12 +297,41 @@
                     aria-labelledby="headeingonethree">
                     <div class="panel-body">
                       <p>
+
                       <ol>
                         <li>
-                          Advanced CSS Styling <b><i>30 mins</i></b>
+                          The learner will learn If statement, If…else, elif
+                          <b><i>30 mins</i></b>
                         </li>
                         <li>
-                          Building a Simple Portfolio Website <b><i>90 mins</i></b>
+                          The learner will learn Loops
+ <b><i>10 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn While loop
+
+ <b><i>20 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn For loop
+
+ <b><i>20 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn Nested loops
+ <b><i>30 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn Loop control statements
+ <b><i>30 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn Break, Continue, pass
+ <b><i>20 mins</i></b>
+                        </li>
+                        <li>
+                          Weekly Coding Challenge
+ <b><i>35 mins</i></b>
                         </li>
 
                       </ol>
