--- a/python.html
+++ b/python.html
@@ -250,6 +250,7 @@
                   </p>
                 </div>
               </div>
+              
               <div class="panel panel-item">
                 <div class="panel-heading" role="tab" id="headingThree">
                   <h4 class="panel-title">
@@ -344,15 +345,21 @@
                     <h4 class="panel-title">
                       <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                         href="#collapseonefive" aria-expanded="false" aria-controls="collapseonefive">
-                        Week 5 - Leveraging Third Party Libraries - Project 1
-                      </a>
+                        Functions                      </a>
                     </h4>
                   </div>
                   <div id="collapseonefive" class="panel-collapse collapse" role="tabpanel"
                     aria-labelledby="headingonefour">
                     <div class="panel-body">
                       <p>
-                        In this lesson, I will take learners through a thirdparty library called formspree that
+                        <ol>
+                          <li>The learner will learn Defining a function – syntax<b><i>12 min</i></b></li>
+                          <li>The learner will learn Calling a function <b><i>20 min</i></b></li>
+                          <li>The learner will learn Function arguments( required, keyword, default and variable-length arguments)<b><i>20 min</i></b></li>
+                          <li>The learner will learn Anonymous function – lambda <b><i>15 mins</i></b> </li>
+                          <li>Weekly Coding Challenge <b><i>35 mins</i></b> </li>
+                          <li>The learner will learn Scope of variables – Global vs Local, enclosing scope and built-in scope <b><i>15 mins</i></b> </li>
+                        </ol>
                       </p>
                     </div>
                   </div>
@@ -362,16 +369,20 @@
                     <h4 class="panel-title">
                       <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                         href="#collapseonesix" aria-expanded="false" aria-controls="collapseonesix">
-                        Week 6 - Portfolio Website
+                        Object Oriented Programming in Python 
                       </a>
                     </h4>
                   </div>
                   <div id="collapseonesix" class="panel-collapse collapse" role="tabpanel"
                     aria-labelledby="headingonefive">
                     <div class="panel-body">
-                      <p>
-                        Portfolio Website
-                      </p>
+                      <ol>
+                        <li>The learner will learn Class attributes, constructors, instance attributes and class methods explained<b><i>12 min</i></b></li>
+                        <li>The learner will learn How to delete attribute, object or a Python class<b><i>20 min</i></b></li>
+                        <li>The learner will learn Inheritance in python<b><i>20 min</i></b></li>
+                        <li>The learner will learn Python access modifiers<b><i>15 mins</i></b> </li>
+                        <li>Weekly Coding Challenge <b><i>35 mins</i></b> </li>
+                      </ol>
                     </div>
                   </div>
                   <div class="panel">
@@ -379,7 +390,7 @@
                       <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionGroupClosed"
                           href="#collapseCloseOne" aria-expanded="true" aria-controls="collapseCloseOne">
-                          Week 7 - Intro to JavaScript
+                          File handling in Python and how to run tests
                         </a>
                       </h4>
                     </div>
@@ -387,16 +398,25 @@
                       aria-labelledby="headingOnefix">
                       <div class="panel-body">
                         <li>
-                          Introduction to JavaScript <b><i>30 mins</i></b>
+                          The learner will learn Understanding how to read/write files in python</i></b>
                         </li>
                         <li>
-                          JavaScript in the Browser <b><i>90 mins</i></b>
+                          The learner will learn Understanding file methods (read(), write(), append(), seek(), tell())</i></b>
                         </li>
                         <li>
-                          Interactive Exercises <b><i>20 mins</i></b>
+                          The learner will learn How to handle exceptions and errors when reading/writing files</i></b>
                         </li>
                         <li>
-                          Q&A and Wrap-up <b><i>10 mins</i></b>
+                          The learner will learn Understanding debugging techniques(print statements, pdb)<b><i>30 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn Understanding how to write tests for test driven development(TDD)<b><i>90 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn How to use Pytest and unittest libraries to write tests<b><i>20 mins</i></b>
+                        </li>
+                        <li>
+                          Weekly Coding Challenge <b><i>10 mins</i></b>
                         </li>
                       </div>
                     </div>
