--- a/python.html
+++ b/python.html
@@ -426,7 +426,7 @@
                       <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionGroupClosed"
                           href="#collapseCloseTwo" aria-expanded="false" aria-controls="headingTwofix">
-                          Week 8 - Functions in JavaScript
+                          Introduction to Django framework
                         </a>
                       </h4>
                     </div>
@@ -434,16 +434,25 @@
                       aria-labelledby="headingTwofix">
                       <div class="panel-body">
                         <li>
-                          Introduction to Functions <b><i>30 mins</i></b>
+                          The learner will learn Django features <b><i>30 mins</i></b>
                         </li>
                         <li>
-                          Parameters and Return Values <b><i>25 mins</i></b>
+                          The learner will learn How to set up django development environment <b><i>25 mins</i></b>
                         </li>
                         <li>
-                          Interactive Exercises <b><i>20 mins</i></b>
+                          How to create virtual environment <b><i>20 mins</i></b>
                         </li>
                         <li>
-                          Q&A and Wrap-up <b><i>10 mins</i></b>
+                          The learner will learn How to install django  <b><i>10 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn Django Project and Django app structure <b><i>10 mins</i></b>
+                        </li>
+                        <li>
+                          How to Create Django project and Django App <b><i>20 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn Django project and app file structure and their functionalities <b><i>10 mins</i></b>
                         </li>
                       </div>
                     </div>
@@ -453,7 +462,7 @@
                       <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionGroupClosed"
                           href="#collapseCloseThree" aria-expanded="false" aria-controls="headingThree8">
-                          Week 9 - Conditions in JavaScript
+                          Django MVT structure, V - Views
                         </a>
                       </h4>
                     </div>
@@ -461,16 +470,22 @@
                       aria-labelledby="headingThree8">
                       <div class="panel-body">
                         <li>
-                          Introduction to Conditional Statements <b><i>30 mins</i></b>
+                          The learner will learn Django MVT structure and flow of logic <b><i>30 mins</i></b>
                         </li>
                         <li>
-                          Switch Statements <b><i>20 mins</i></b>
+                          The learner will learn function based views <b><i>20 mins</i></b>
                         </li>
                         <li>
-                          Interactive Exercises <b><i>20 mins</i></b>
+                          The learner will learn request and response cycle <b><i>20 mins</i></b>
                         </li>
                         <li>
-                          Q&A and Wrap-up <b><i>10 mins</i></b>
+                          The learner will learn HTTPResponse and render function in Django <b><i>30 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn URL - Mapping / Configuration  <b><i>30 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn class based views <b><i>30 mins</i></b>
                         </li>
                       </div>
                     </div>
@@ -480,7 +495,7 @@
                       <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionGroupClosed"
                           href="#collapseCloseThree4" aria-expanded="false" aria-controls="headingThree4">
-                          Week 10 - JavsScript JSON
+                          Django templates, static files And media files
                         </a>
                       </h4>
                     </div>
