--- a/python.html
+++ b/python.html
@@ -503,16 +503,16 @@
                       aria-labelledby="headingThree">
                       <div class="panel-body">
                         <li>
-                          Introduction to JSON <b><i>30 mins</i></b>
+                          The learner will learn  Django templating language <b><i>30 mins</i></b>
                         </li>
                         <li>
-                          Working with JSON Data <b><i>20 mins</i></b>
+                          The learner will learn template variables, tags and comments <b><i>20 mins</i></b>
                         </li>
                         <li>
-                          Hands-on JSON Exercises <b><i>20 mins</i></b>
+                          The learner will learn  template inheritance (extends and includes) <b><i>20 mins</i></b>
                         </li>
                         <li>
-                          Q&A and Wrap-up <b><i>10 mins</i></b>
+                          The learner will learn how to handle static file and media files in django project <b><i>10 mins</i></b>
                         </li>
                       </div>
                     </div>
@@ -522,15 +522,28 @@
                       <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionGroupClosed"
                           href="#collapseCloseThree5" aria-expanded="false" aria-controls="headingThree5">
-                          Week 11 - Leveraging Third Party Libraries - Project 3
+                          Django Models
                         </a>
                       </h4>
                     </div>
                     <div id="collapseCloseThree5" class="panel-collapse collapse" role="tabpanel"
                       aria-labelledby="headingThree">
                       <div class="panel-body">
-                        In this lesson, I will train the learners on how to use a third party library called intasend to
-                        access payment gateway integrations
+                        <li>
+                          The learner will learn  Django models and model fields <b><i>30 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn How to create a django models <b><i>20 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn How to create methods in django models <b><i>40 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn Registering Django models in the admin site <b><i>20 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn Makemigration, migrate, showmigrations, sqlmigrate,runserver <b><i>30 mins</i></b>
+                        </li>
                       </div>
                     </div>
                   </div>
@@ -539,15 +552,25 @@
                       <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionGroupClosed"
                           href="#collapseCloseThree6" aria-expanded="false" aria-controls="headingThree6">
-                          Week 12 - Task Management Website - Project 4
+                          Django ORM and Django Forms
                         </a>
                       </h4>
                     </div>
                     <div id="collapseCloseThree6" class="panel-collapse collapse" role="tabpanel"
                       aria-labelledby="headingThree">
                       <div class="panel-body">
-                        During this session, I will take the learner's through a step by step process on building a
-                        dynamic task management website
+                        <li>
+                          The learner will learn Django ORM <b><i>30 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn Django Modelforms and forms <b><i>20 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn Form validation <b><i>20 mins</i></b>
+                        </li>
+                        <li>
+                          The learner will learn Using third party libraries to render django forms (Crispy forms) <b><i>30 mins</i></b>
+                        </li>
                       </div>
                     </div>
                   </div>
@@ -556,7 +579,7 @@
                       <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionGroupClosed"
                           href="#collapseCloseThree7" aria-expanded="false" aria-controls="headingThree7">
-                          Week 13 to Week 16 - Final Project
+                          Database Connectivity Options
                         </a>
                       </h4>
                     </div>
