--- a/python.html
+++ b/python.html
@@ -585,9 +585,10 @@
                     </div>
                     <div id="collapseCloseThree7" class="panel-collapse collapse" role="tabpanel"
                       aria-labelledby="headingThree">
-                      <div class="panel-body">
-                        During these sessions, we will spend time to create projects that reflect the learnings from our
-                        past couple of sessions
+                      <div class="panel-body">              
+                        <li>
+                          The learner will Be able to connect Django with a database. Eg. MySQL, POSTGRESQL for scalability <b><i>30 mins</i></b>
+                        </li>
                       </div>
                     </div>
                   </div>
@@ -596,54 +597,24 @@
                       <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionGroupClosed"
                           href="#collapseCloseThree8" aria-expanded="false" aria-controls="headingThree8">
-                          Week 13 to Week 16 - Final Project
+                          Final Project Implementation Using Django
                         </a>
                       </h4>
                     </div>
                     <div id="collapseCloseThree8" class="panel-collapse collapse" role="tabpanel"
                       aria-labelledby="headingThree">
                       <div class="panel-body">
-                        During these sessions, we will spend time to create projects that reflect the learnings from our
-                        past couple of sessions
+
+                        <li>
+                          Final project implementation <b><i>30 mins</i></b>
+                        </li>
+                        <li>
+                          Learning how to deploy in Cloud platforms like Digital Ocean, AWS, versel, Railway etc <b><i>30 mins</i></b>
+                        </li>
                       </div>
                     </div>
                   </div>
                   <!---->
-                  <div class="panel">
-                    <div class="panel-heading" role="tab" id="headingThree9">
-                      <h4 class="panel-title">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionGroupClosed"
-                          href="#collapseCloseThree9" aria-expanded="false" aria-controls="headingThree9">
-                          Week 13 to Week 16 - Final Project
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="collapseCloseThree9" class="panel-collapse collapse" role="tabpanel"
-                      aria-labelledby="headingThree">
-                      <div class="panel-body">
-                        During these sessions, we will spend time to create projects that reflect the learnings from our
-                        past couple of sessions
-                      </div>
-                    </div>
-                  </div>
-                  <!---->
-                  <div class="panel">
-                    <div class="panel-heading" role="tab" id="headingThree10">
-                      <h4 class="panel-title">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionGroupClosed"
-                          href="#collapseCloseThree10" aria-expanded="false" aria-controls="headingThree10">
-                          Week 13 to Week 16 - Final Project
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="collapseCloseThree10" class="panel-collapse collapse" role="tabpanel"
-                      aria-labelledby="headingThree">
-                      <div class="panel-body">
-                        During these sessions, we will spend time to create projects that reflect the learnings from our
-                        past couple of sessions
-                      </div>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
