--- a/python.html
+++ b/python.html
@@ -154,7 +154,7 @@
         <div class="col-sm-8 col-md-9">
           <div class="single-blog-area large-preview sigle-blog-post">
             <div class="blog-img">
-              <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="theimran.com" />
+              <img class="width:50px; " src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="theimran.com" />
             </div>
             <a href="single.html">
               <h3>Python Lesson Plan</h3>
